# solana-escrow

./: Cargo.toml
escrow-backend/: .gitignore  Cargo.toml
escrow-backend/src/: entrypoint.rs  errors.rs  lib.rs  processor.rs
escrow-frontend/: package.json  pnpm-lock.yaml
escrow-frontend/src/app/: layout.tsx  page.tsx
escrow-frontend/src/app/escrow/: page.tsx
escrow-frontend/src/components/: escrow-interface.tsx  wallet-provider.tsx
escrow-frontend/src/helpers/: ata.ts  client.ts  connection.ts
escrow-frontend/src/validators/: escrow.validators.ts
src/: errors.rs  instructions.rs  instuctions.rs  lib.rs  processor.rs
tests/: escrow_tests.rs
