[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.7"
# solana-program = "1.16.0"
# spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
solana-program = "2.3.0"
spl-associated-token-account = "7.0.0"
spl-token = { version = "6.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.3.6"
solana-sdk = "2.3.1"
tokio = { version = "1", features = ["macros"] }
